# youbot_arm_torque_control

./: .gitignore  CMakeLists.txt  package.xml
include/: ControlNode.h
launch/: control_node.launch  get_joint_trajectory_real.launch
rviz/: for_working_with_trajectory.rviz
scripts/: dec2joint_translator.py  decart_trajectory_publisher.py  drawer.py  friction.txt  friction_sin.txt  friction_test.py  get_taus_for_theta.py  trajectory_vizualizator.py  trajectory_vizualizator_real.py
src/: ControlNode.cpp
