<?xml version="1.0"?>
<package format="2">
    <name>youbot_arm_torque_control</name>
    <version>0.0.0</version>
    <description>ok, I'm not empty now!</description>
    <maintainer email="evgeniy@todo.todo">evgeniy</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>youbot_arm_kinematics</build_depend>
    <build_depend>brics_actuator</build_depend>

    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>youbot_arm_kinematics</build_export_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>

    <export>
    </export>
</package>